<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>FrameOSDWind</class>
 <widget class="QWidget" name="FrameOSDWind">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout_3">
   <item>
    <widget class="QGroupBox" name="groupBox">
     <property name="title">
      <string>GroupBox</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
       <layout class="QVBoxLayout" name="verticalLayout">
        <property name="spacing">
         <number>0</number>
        </property>
        <property name="sizeConstraint">
         <enum>QLayout::SetMinimumSize</enum>
        </property>
        <item>
         <widget class="FrameTextInput" name="inputSpeed" native="true"/>
        </item>
        <item>
         <widget class="FrameTextInput" name="inputDirection" native="true"/>
        </item>
        <item>
         <widget class="FrameOSDMode" name="mode" native="true"/>
        </item>
       </layout>
      </item>
      <item>
       <spacer name="verticalSpacer">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeType">
         <enum>QSizePolicy::Ignored</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>109</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QPushButton" name="pushButton">
        <property name="text">
         <string>Apply</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>FrameOSDMode</class>
   <extends>QWidget</extends>
   <header>src/view/panel/osd/frame_osd_mode.h</header>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>FrameTextInput</class>
   <extends>QWidget</extends>
   <header>src/view/shared/frame_text_input.h</header>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
